--- a/index.html
+++ b/index.html
@@ -5,11 +5,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
-  
-
+<link rel="stylesheet" href="estilos.css">
   <title>Portafolio Dinamico</title>
 </head>
 <body>
+ <div class="contenedor">
+   <header>
+     <div class="logo">
+       <h1>Manuela García</h1>
+       <p>Programadora</p>
+     </div>
+     <form class="" action="index.html" method="post">
+       <input type="text" name="" value="" class="barra-busqueda" id="barra-busqueda" placeholder="Buscar">
 
+     </form>
+     <div class="categorias" id="categorias">
+        <a href="#" class="activo">Todos</a>
+        <a href="#">Naturaleza</a>
+        <a href="#">Personas</a>
+        <a href="#">Ciudades</a>
+        <a href="#">Animales</a>
+     </div>
+   </header>
+
+   <section class="grid">
+      <div class="item">
+        <div class="item-contenido">
+            <img src="img/ciudad1.png" alt="">
+        </div>
+      </div>
+   </section>
+ </div>
+
+ <script src="https://unpkg.com/web-animations-js@2.3.2/web-animations.min.js"></script>
+ <script src="https://unpkg.com/muuri@0.8.0/dist/muuri.min.js"></script>
+ <script src="main.js" charset="utf-8"></script>
 </body>
 </html>
