--- a/index.html
+++ b/index.html
@@ -28,17 +28,50 @@
      </div>
    </header>
 
-   <section class="grid">
-      <div class="item">
+   <section class="grid" id="grid">
+      <div class="item"
+      data-categoria="Ciudades"
+      data-etiquetas="cuidades carros autos calles"
+      data-descripcion="1.- ciudad en la que hay muchos autos">
         <div class="item-contenido">
             <img src="img/ciudad1.png" alt="">
         </div>
+
       </div>
+      <div class="item"
+      data-categoria="Personas"
+      data-etiquetas="Personas mujeres"
+      data-descripcion="2.- rostro de una mujer">
+        <div class="item-contenido">
+            <img src="img/persona1.png" alt="">
+        </div>
+      </div>
+
+      <div class="item"
+      data-categoria="Paisajes"
+      data-etiquetas="Paisajes montaña mar playa naturaleza"
+      data-descripcion="3.- paisajes naturales">
+        <div class="item-contenido">
+            <img src="img/paisaje1.png" alt="">
+        </div>
+      </div>
+
+      <div class="item"
+      data-categoria="Animales"
+      data-etiquetas="Animales leon"
+      data-descripcion="4.- leon ">
+        <div class="item-contenido">
+            <img src="img/animal1.png" alt="">
+        </div>
+      </div>
+
+      
+
    </section>
  </div>
 
  <script src="https://unpkg.com/web-animations-js@2.3.2/web-animations.min.js"></script>
  <script src="https://unpkg.com/muuri@0.8.0/dist/muuri.min.js"></script>
- <script src="main.js" charset="utf-8"></script>
+ <script src="main.js"></script>
 </body>
 </html>
